Adding notification in real time

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,11 @@ quarkus.hibernate-orm.database.generation=update
 
 # CORS Support
 quarkus.http.cors=true
+quarkus.http.cors.origins=*
+quarkus.http.cors.methods=GET,POST,PUT,DELETE,OPTIONS
+quarkus.http.cors.headers=Content-Type,Authorization,x-requested-with,origin,accept
+quarkus.http.cors.access-control-allow-credentials=true
+
 
 # Kafka Configuration for Outgoing Channel(Producer)
 mp.messaging.outgoing.employee-notifications.connector=smallrye-kafka
@@ -18,7 +23,7 @@ mp.messaging.outgoing.employee-notifications.value.serializer=org.apache.kafka.c
 mp.messaging.outgoing.employee-notifications.bootstrap.servers=localhost:9093
 
 # Kafka Configuration for Incoming Channel(Consumer)
-mp.messaging.incoming.employee-updates.connector=smallrye-kafka
-mp.messaging.incoming.employee-updates.topic=employee-updates
-mp.messaging.incoming.employee-updates.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
-mp.messaging.incoming.employee-updates.bootstrap.servers=localhost:9093
+mp.messaging.incoming.employee-notifications-in.connector=smallrye-kafka
+mp.messaging.incoming.employee-notifications-in.topic=employee-notifications
+mp.messaging.incoming.employee-notifications-in.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+mp.messaging.incoming.employee-notifications-in.bootstrap.servers=localhost:9093
