Ajout de JWT configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 quarkus.http.port=8083
 
+
+quarkus.application.name=employee-management
+
+
 # Database Configuration
 quarkus.datasource.jdbc.driver=com.mysql.cj.jdbc.Driver
 quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3308/employees
@@ -27,3 +31,12 @@ mp.messaging.incoming.employee-notifications-in.connector=smallrye-kafka
 mp.messaging.incoming.employee-notifications-in.topic=employee-notifications
 mp.messaging.incoming.employee-notifications-in.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 mp.messaging.incoming.employee-notifications-in.bootstrap.servers=localhost:9093
+
+
+#location of the public key to verify the tokens 
+mp.jwt.verify.publickey.location=publicKey.pem
+
+
+quarkus.log.category."io.smallrye.jwt".level=DEBUG
+quarkus.log.category."io.quarkus.jwt".level=DEBUG
+quarkus.log.category."org.jboss.resteasy.reactive.server".level=DEBUG
